--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kids Win Pro</title>
+  <title>Kids Win Pro – Grid UI</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎉 Kids Win Pro 🎉</h1>
+  <h1>🎉 Kids Win Pro</h1>
   <label for="child-select">Switch Child:</label>
   <select id="child-select"></select>
+
+  <div id="pin-section">
+    <button onclick="enterPin()">🔐 Enter Parent PIN</button>
+  </div>
+
   <div id="child-dashboard">
     <p><strong>Avatar:</strong> <span id="child-avatar"></span></p>
     <p><strong>Coins:</strong> <span id="child-coins">0</span></p>
@@ -23,16 +28,11 @@
     <h2>🌙 Evening Tasks</h2>
     <ul id="evening-tasks"></ul>
 
-    <h2>🎁 Reward Shop</h2>
-    <div id="reward-section">
-      <h3>Available Rewards</h3>
-      <ul id="reward-list"></ul>
-    </div>
+    <h2>🎁 Available Rewards</h2>
+    <ul id="reward-list"></ul>
 
-    <div id="purchased-section">
-      <h3>Purchased Rewards</h3>
-      <ul id="purchased-rewards"></ul>
-    </div>
+    <h2>✅ Purchased Rewards</h2>
+    <ul id="purchased-rewards"></ul>
   </div>
 
   <button onclick="addTask()">➕ Add Task</button>
