--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <h2>✅ Purchased Rewards</h2>
     <ul id="purchased-rewards"></ul>
   </div>
+<!-- Add this below the dashboard in index.html -->
+<h2>📅 Monthly Calendar</h2>
+<div id="calendar" class="calendar-grid"></div>
+<button onclick="prevMonth()">⬅️</button>
+<button onclick="nextMonth()">➡️</button>
+
 
   <button onclick="addTask()">➕ Add Task</button>
   <button onclick="addReward()">🎁 Add Reward</button>
